product query handle added

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PostgreSqlConnectionString": "User ID=postgres;Password=Inf6y@0419;Host=localhost;Port=5432;Database=test;Pooling=true;"
 }
